# serenity

./: CMakeLists.txt
AK/: ByteBuffer.h  HashMap.h  NonnullOwnPtr.h  NonnullRefPtr.h  Optional.h  OwnPtr.h  RefPtr.h  Types.h
Applications/: CMakeLists.txt
Applications/CrashDaemon/: Backtrace.cpp  Backtrace.h  CMakeLists.txt  CoreDumpReader.cpp  CoreDumpReader.h  main.cpp
Applications/Debugger/: DebugSession.cpp  DebugSession.h  Makefile  main.cpp
Applications/Loader/: CMakeLists.txt  DynamicObject.cpp  DynamicObject.h  DynamicSection.cpp  DynamicSection.h  Heap.cpp  List.h  Syscalls.cpp  Syscalls.h  Utils.cpp  Utils.h  main.cpp  math.cpp
Demos/: CMakeLists.txt
Demos/Debugee/: main.cpp
Demos/DynamicLoader/ExampleSO/: CMakeLists.txt  example.cpp
Demos/DynamicObject/: CMakeLists.txt  main.cpp
Demos/Ptrace/: Makefile  main.cpp
Demos/WidgetGallery/: CMakeLists.txt
DevTools/HackStudio/: CodeDocument.cpp  CodeDocument.h  DebugInfoWidget.cpp  DebugInfoWidget.h  Debugger.cpp  Editor.cpp  Editor.h  HackStudioWidget.cpp  Makefile  ProjectFile.cpp  main.cpp
DevTools/ProfileViewer/: DisassemblyModel.cpp  Profile.cpp
DevTools/Profiler/: Profile.cpp
DevTools/UserspaceEmulator/: Emulator.cpp  Emulator.h  MallocTracer.h
Kernel/: CMakeLists.txt  CoreDump.cpp  Makefile  Process.cpp  Process.h  ProcessTracer.cpp  Ptrace.cpp  Scheduler.cpp  Syscall.cpp  Syscall.h  Thread.cpp  Thread.h  ThreadTracer.cpp  ThreadTracer.h  UnixTypes.h  build-root-filesystem.sh
Kernel/API/: Syscall.h
Kernel/FileSystem/: Inode.cpp  InodeWatcher.cpp  VirtualFileSystem.cpp
Kernel/Syscalls/: execve.cpp  mmap.cpp
Libraries/: CMakeLists.txt
Libraries/LibC/: CMakeLists.txt  crt0_shared.cpp  dlfcn.cpp  dlfcn.h  stat.cpp  stdio.cpp  unistd.cpp
Libraries/LibCompress/: CMakeLists.txt
Libraries/LibCore/: CMakeLists.txt  DirectoryWatcher.cpp  DirectoryWatcher.h  EventLoop.cpp
Libraries/LibCoreDump/: CoreDumpReader.cpp  CoreDumpReader.h
Libraries/LibCrypto/: CMakeLists.txt
Libraries/LibCrypto/Authentication/: HMAC.h
Libraries/LibCrypto/Cipher/: AES.cpp  AES.h  Cipher.h
Libraries/LibCrypto/Cipher/Mode/: CBC.h  Mode.h
Libraries/LibCrypto/Hash/: HashFunction.h  MD5.cpp  MD5.h  SHA2.cpp  SHA2.h
Libraries/LibIPC/: CMakeLists.txt
Libraries/LibPthread/: CMakeLists.txt
Libraries/LibThread/: CMakeLists.txt
Meta/: build-image-qemu.sh  build-root-filesystem.sh
Userland/: CMakeLists.txt  Makefile  example.cpp  functrace.cpp  strace.cpp  test-crypto.cpp
(+115 files in other folders)
